--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,13 @@ html {
   margin-top: 2rem; }
 
 .u-display-none {
-  display: none; }
+  display: none !important; }
 
 .u-display-block {
   display: grid !important; }
+
+.u-padding-medium {
+  padding: 7rem; }
 
 .scale-up {
   animation: scaleUp 2s; }
@@ -58,7 +61,15 @@ html {
   border-radius: .5rem;
   padding: .5rem .7rem;
   border: none;
-  text-decoration: none; }
+  text-decoration: none;
+  cursor: pointer; }
+
+.verified {
+  padding: 1rem 1.5rem;
+  background-color: #9b50ba;
+  color: white !important;
+  text-transform: uppercase;
+  border-radius: .9rem; }
 
 .currency-image {
   width: 1.6rem;
@@ -140,7 +151,7 @@ html {
   grid-row-gap: 2.5rem;
   grid-column-gap: 1.5rem;
   width: 95%;
-  box-shadow: 1rem 3rem 5rem rgba(0, 0, 0, 0.2);
+  box-shadow: 1rem 3rem 5rem rgba(30, 165, 255, 0.3), -1rem 3rem 5rem rgba(30, 165, 255, 0.3);
   margin: auto;
   justify-items: center;
   align-items: center;
@@ -162,13 +173,13 @@ html {
       color: white; }
   .depositModal__heading {
     grid-column: 1/3;
-    font-size: 2.5rem !important; }
+    font-size: 2.5rem !important;
+    font-weight: bold;
+    text-transform: uppercase; }
   .depositModal__select-currency {
-    grid-column: 1/2;
-     }
+    grid-column: 1/2; }
   .depositModal__select-plan {
-    grid-column: 2/3;
-    }
+    grid-column: 2/3; }
   .depositModal__input-amount {
     grid-column: 1/3;
     justify-self: center; }
@@ -180,7 +191,33 @@ html {
     grid-column: 2/3; }
   .depositModal__button {
     padding: .7rem 1.2rem;
-    font-size: 1.3rem; }
+    font-size: 1.6rem; }
+  .depositModal__finalResult {
+    grid-row: 1/2;
+    grid-column: 1/3;
+    font-size: 1.6rem;
+    color: #333a46; }
+  .depositModal__timer {
+    grid-row: 2/3;
+    grid-column: 1/3;
+    font-size: 1.5rem;
+    justify-self: center; }
+  .depositModal__warning {
+    color: #95a1b3;
+    justify-self: center;
+    grid-column: 1/3; }
+  .depositModal__finalAmount {
+    color: #333a46;
+    font-weight: bold; }
+  .depositModal__finalAddress {
+    color: #1ea5ff;
+    font-weight: bold; }
+  .depositModal__back {
+    grid-column: 1/2;
+    color: white;
+    background-color: #b33737 !important; }
+  .depositModal__confirm {
+    grid-column: 2/3; }
 
 .heading-1 {
   color: #333a46;
@@ -189,6 +226,12 @@ html {
 .heading-2 {
   color: #042c5c;
   font-size: 1.6rem;
+  letter-spacing: 1.5px;
+  text-transform: capitalize; }
+
+.heading-3 {
+  color: #95a1b3;
+  font-size: 1.2rem;
   letter-spacing: 1.5px;
   text-transform: capitalize; }
 
@@ -227,7 +270,8 @@ html {
     color: #95a1b3; }
 
 .main {
-  position: relative; }
+  position: relative;
+  padding: 3rem; }
 
 .heading {
   display: grid;
@@ -254,7 +298,6 @@ html {
   display: inline-block;
   font-size: 2.2rem;
   color: #333a46;
-  position: absolute;
   top: -.8rem;
   margin-left: .3rem;
   transition: all .3s; }
@@ -340,3 +383,58 @@ html {
       align-self: end;
       font-size: 2.5rem;
       text-decoration: none; }
+
+.recent-activities-box {
+  box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.15);
+  padding: 2rem; }
+
+.recent-activities-item {
+  list-style: none;
+  display: grid;
+  grid-template-columns: max-contet max-content;
+  align-content: start;
+  justify-content: space-between;
+  grid-column-gap: 1rem;
+  grid-row-gap: 0; }
+  .recent-activities-item:not(:last-child) {
+    margin-bottom: 2.5rem; }
+
+.recent-activities-item > div {
+  grid-column: 1/2;
+  display: grid;
+  grid-template-columns: min-content max-content;
+  grid-column-gap: 1.5rem;
+  justify-content: center; }
+
+.recent-activities-img {
+  grid-column: 1/2; }
+
+.recent-activities-type {
+  color: #95a1b3;
+  grid-column: 2/3; }
+
+.recent-activities-type > .p1 {
+  font-size: 1.4rem; }
+
+.recent-activities-dayAgo {
+  grid-column: 2/3;
+  align-self: center; }
+
+.date {
+  grid-row: 2/3;
+  grid-column: 2/3; }
+
+.recent-activities-img {
+  height: 50px;
+  align-self: center;
+  width: 50px;
+  object-fit: cover; }
+
+.kyc-box {
+  box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.15);
+  padding: 2rem; }
+
+.notification-box {
+  box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.15);
+  padding: 2rem;
+  padding-bottom: 6rem; }
